<resources>
    <string name="app_name">تکمال ویزیتور</string>
    <string name="anbar_gardani">انبارگردانی</string>
    <string name="check_products">انبارگردانی</string>
    <string name="search_a_good">جست و جوی یک محصول</string>
    <string name="connect_to_computer">اتصال به کامپیوتر</string>
    <string name="about_developer">درباره ی توسعه دهنده</string>
    <string name="ProductDetailsText">SKU : %sku%
        \n
    بارکد : %code%
        \n
موجودی : %stock%
        \n
        نام فروشگاه : %shopname%
        \n
        تلفن تماس : %telephone%
        \n
        آدرس فروشگاه :‌ %address%
    </string>
    <string name="at_this_shop_we_not_have_products">در این فروشگاه محصولی وجود ندارد</string>
    <string name="you_finished_products_of_this_shop">شما محصولات این فروشگاه را به پایان رساندید</string>
    <string name="you_are_at_first_of_products">شما در ابتدای فهرست محصولات هستید</string>
    <string name="change_product_to_out_of_stock">تغییر موجودی کالا با SKU %SKU% به ناموجود</string>
    <string name="change_variation_to_out_of_stock">تغییر موجودی کالا به SKU %SKU% با اندازه %size% و رنگ %color% به ناموجود</string>
    <string name="change_price_to_out_of_stock">تغییر قیمت کالا با SKU %SKU% به %price%</string>
    <string name="change_price_and_variations">تغییر قیمت و متغیر ها</string>
    <string name="save_changes">ذخیره ی تغییرات</string>
    <string name="price">قیمت</string>
    <string name="color_is_">رنگ :‌%color%</string>
    <string name="size_is_">اندازه : ‌%size%</string>
    <string name="changes_saved_successfully">تنظیمات با موفقیت ذخیره شد</string>
    <string name="please_enter_product_sku">لطفا SKU محصول را وارد کنید</string>
    <string name="search">جست و جو</string>
    <string name="product_not_found">محصول مورد نظر وجود ندارد</string>
    <string name="delete_change">حذف تغییر</string>
    <string name="do_you_want_to_delete_">آیا مایل به حذف " %V% " هستید؟</string>
    <string name="no">خیر</string>
    <string name="yes">بلی</string>
    <string name="change_report">گزارش تغییرات</string>
    <string name="transfer_data_to_computer">انتقال داده ها به کامپیوتر</string>
    <string name="about_application">درباره نرم افزار</string>
    <string name="about_application_description"> این اپلیکیشن به سفارش گروه تکمال اسپرت (‌فروشگاه اینترنتی تکمال اسپرت ) طراحی و پیاده سازی شده است . کلیه حقوق این اثر متعلق به نام تجاری تکمال اسپرت می باشد . جهت کسب اطلاعات بیشتر به آدرس زیر مراجعه کنید \n www.takmallsport.com</string>
    <string name="no_stock">ناموجود</string>
    <string name="stock">موجود</string>

</resources>
