<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.takmallsport.takmallsportvisitorsapp.ui.Main.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/takmall" />

    <GridLayout
        android:id="@+id/layoutGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:animateLayoutChanges="false"
        android:columnCount="2"
        android:columnOrderPreserved="true"
        android:foregroundGravity="fill"
        android:rowCount="2"
        android:rowOrderPreserved="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <Button
            android:id="@+id/button_check_products"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_gravity="fill_vertical|fill_horizontal"
            android:layout_weight="70"
            android:gravity="center_horizontal|center"
            android:text="@string/check_products"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.135"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="175dp" />

        <Button
            android:id="@+id/button_search_a_product"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_weight="70"
            android:foregroundGravity="fill"
            android:text="@string/search_a_good"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="244dp" />

        <Button
            android:id="@+id/button_connect_to_computer"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="fill_horizontal|fill"
            android:layout_weight="70"
            android:text="@string/connect_to_computer"
            tools:layout_editor_absoluteX="255dp"
            tools:layout_editor_absoluteY="320dp" />

        <Button
            android:id="@+id/button_change_report"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:layout_gravity="fill_horizontal|fill"
            android:text="@string/change_report"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="404dp" />
    </GridLayout>

    <Button
        android:id="@+id/button_about_application"
        style="@android:style/Widget.Material.Light.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/about_application"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
